tests/fixtures/invalid/pow_none_bytes_dict.py
# Cannot call pow() with None, Bytes, Dict[str, int]
x = pow(None, b"hello", {"a": 1})
